flow-ops/examples/httpbin/mirroring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-httpbin
      version: v1
  template:
    metadata:
      labels:
        app: mirror-httpbin
        version: v1
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: ["gunicorn", "--access-logfile", "-", "-b", "0.0.0.0:80", "httpbin:app"]
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-httpbin
      version: v2
  template:
    metadata:
      labels:
        app: mirror-httpbin
        version: v2
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: ["gunicorn", "--access-logfile", "-", "-b", "0.0.0.0:80", "httpbin:app"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mirror-httpbin
  labels:
    app: mirror-httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: mirror-httpbin
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - route:
    - destination:
        host: mirror-httpbin
        subset: v1
      weight: 50
    - destination:
        host: mirror-httpbin
        subset: v2
      weight: 50
    mirror:
      host: httpbin
    mirrorPercentage:
      value: 100.0
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mirror-httpbin
spec:
  host: mirror-httpbin
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
